tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_type_mismatch_deci_to_int.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:int = 10
x = 2.5

